--- a/version2.tex
+++ b/version2.tex
@@ -437,7 +437,82 @@ H(x) = -280.0 \; \mbox{cm}; \quad \forall x \in \Omega,
 \end{lineq}
 and thus $\frac{\partial h}{\partial z} = -1$.
 
-\subsubsection{Numerical solution and computational issues}
+
+
+
+\subsection{Optimization}
+
+\subsubsection{Objective function} %[michal]
+\label{objdef}
+
+The soil hydraulic parameters (SHP) of the top soil that will be identified were specified in section~\ref{shp}.
+Since the parameters will be identified using a stochastic method, we have to introduce a physically reasonable range for each parameter. The ranges for the SHP are specified in table~\ref{rozsahy}.
+
+\begin{table*}[ht]
+\begin{center}
+\caption{Ranges of SHP ($\vec{p}_{max}$ and $\vec{p}_{min}$) for identifying the SHP in the top-soil layer for {\it refinement level} $r_f=0$. Note that the initial ranges are extremely broad especially for the saturated water content $\theta_s$. This broad range was selected in order to explore the uniqnuess
+of the REVG inverse model of SR experiment
+ even beyond the physically acceptable solutions. }
+\fs
+\begin{tabular}{c | c| c| c| c}
+\toprule
+% Ranges of depths, horizon(s)&\multicolumn{4}{c}{Input values for inverse modelling}\\ \cline{2-5}
+$\theta_s$ [-]&$\alpha$ [cm$^{-1}$]&n [-]& $K_s$ [m.s$^{-1}$] & $S_s$ [m$^{-1}$] \\ \hline
+\toprule
+0.25 -- 0.90 & \num{0.01e-2} -- \num{5.0e-2} & 1.05 -- 4.5 & 0.300 -- 300.0 & 0.0 -- 0.1 \\
+\toprule
+\end{tabular}
+\label{rozsahy}
+\end{center}
+\end{table*}
+
+The objective function is defined in the following paragraph.
+
+
+Let $\bar{I}(\vec{p},t)$ be the cumulative infiltration obtained from solving the mathematical model~\eqref{richaxi} bounded by the initial and boundary conditions  defined in section~\ref{bccond} for a certain vector of SHP parameters $\vec{p}$ considered as
+\begin{lineq}\bar{I}(\vec{p},t) = \frac{\int\limits_0^t \int\limits_{\Gamma_1}-K \frac{\partial H}{\partial \vec{n}}(t)  \dd \Gamma_1 \dd t}{\int\limits_{\Gamma_1} \dd \Gamma_1}.\end{lineq}
+Let $I(t)$ be the cumulative infiltration defined by \eqref{vyhlaz} with parameters given in section~\ref{krivka}. 
+Then the objective function was defined for three different criteria in order to avoid ill-posed objective function definition.
+
+The objective functions were defined as follows:
+\begin{enumerate}[label={\bf \Roman*}.]
+\item First criterion $\Psi_1$ was defined as $L_2$ norm of the difference between the  experimental and model data and thus
+\begin{lineq}
+\label{objektiva1}
+\Psi_1 (\vec{p}) = \sqrt{\int\limits_0^{T_{end}} \left( \bar{I}(\vec{p},t) - I(t) \right)^2 \dd t},
+\end{lineq}
+where $T_{end}$ is the final simulation time [$T$], which is indeed the root mean square error (RMSE) for continuous functions. 
+\item Second criterion was the $L_{\infty}$ norm of the difference between the experimental and model data and thus
+\begin{lineq}
+\label{objektiva2}
+\Psi_2 (\vec{p}) = \mathrm{sup} \left( \sqrt{\left( \bar{I}(\vec{p},t) - I(t) \right)^2} \right), \quad  t \in (0, T_{end}).
+\end{lineq}
+\item Third criterion was considered as the difference between the infiltration rates (final derivatives) between the model data and the experimental data
+\begin{lineq}
+\label{objektiva3}
+\Psi_3 (\vec{p}) =  \sqrt{\left( \frac{\dd \bar{I}(\vec{p},T_{end})}{\dd t} - \frac{\dd I(T_{end})}{\dd t} \right)^2}.
+\end{lineq}
+
+
+\end{enumerate}
+
+We conducted multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and \eqref{objektiva3}. The aim of this multi-objective definition was to improve the conditioning of this inverse problem. If we only considered the objective function~\eqref{objektiva1}, then we were probably able to obtain the same solution as with this multi-objective definition with slower convergence of optimization procedure only (the selection of the optimization algorithm will be explained in the following section~\ref{optima}). This multi-objective function definition is based on our experience from previous attempts of inverse analysis of this infiltration problem.
+
+
+
+\subsubsection{Optimization algorithm}%[matej]
+\label{optima}
+
+In this contribution we used the modified genetic algorithm GRADE \citep{grade,Kucerova:2007:PHD} supported by niching method CERAF \citep{Hrstka} enhancing the algorithm with
+memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the standard genetic algorithm and differential operators taken from differential evolution. When GRADE converges, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is built around it in order to forbid the optimization algorithm to fall into the same local extreme again. The main setting of the optimization procedure was as follows: the population of the genetic algorithm contains 30 independent solutions, the whole identification stops after 20.000 objective function evaluations and a local extreme was marked after 600 evaluations without any improvement.
+
+
+% \subsubsection{Multi-objective Optimization}
+% !!!!!!add connections
+ In this contribution Average Ranking (AR) \citep{Leps:2007} was used to deal with multi-objective definition. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}. 
+
+
+\subsection{Numerical solution and computational issues}
 \label{trapoty}
 
 Equation~\eqref{richaxi} was implemented into the DRUtES library~\citep{drutes}. It is an object-oriented library written in Fortran 2003/2008 standard for solving nonlinear coupled convection-diffusion-reaction type problems. The problem was approximated by the linear finite element method for spatial derivatives and Rothe's method for temporal derivatives. The nonlinear operator was treated with the Schwarz-Picard method -- an adaptive domain decomposition  ($dd$-adaptivity) -- with the ability to activate and deactivate subregions of the computational domain sequentially ~\citep{mojecomp, mojejcam2, mojeamc2}.
@@ -546,78 +621,20 @@ The following sections will further explain the definition of the objective func
 
 
 
-\subsection{Optimization}
 
-\subsubsection{Parameter identification, a definition of the objective function} %[michal]
-\label{objdef}
-
-The soil hydraulic parameters (SHP) of the top soil that will be identified were specified in section~\ref{shp}.
-Since the parameters will be identified using a stochastic method, we have to introduce a physically reasonable range for each parameter. The ranges for the SHP are specified in table~\ref{rozsahy}.
-
-\begin{table*}[ht]
-\begin{center}
-\caption{Ranges of SHP ($\vec{p}_{max}$ and $\vec{p}_{min}$) for identifying the SHP in the top-soil layer for {\it refinement level} $r_f=0$. Note that the initial ranges are extremely broad especially for the saturated water content $\theta_s$. This broad range was selected in order to explore the uniqnuess
-of the REVG inverse model of SR experiment
- even beyond the physically acceptable solutions. }
-\fs
-\begin{tabular}{c | c| c| c| c}
-\toprule
-% Ranges of depths, horizon(s)&\multicolumn{4}{c}{Input values for inverse modelling}\\ \cline{2-5}
-$\theta_s$ [-]&$\alpha$ [cm$^{-1}$]&n [-]& $K_s$ [m.s$^{-1}$] & $S_s$ [m$^{-1}$] \\ \hline
-\toprule
-0.25 -- 0.90 & \num{0.01e-2} -- \num{5.0e-2} & 1.05 -- 4.5 & 0.300 -- 300.0 & 0.0 -- 0.1 \\
-\toprule
-\end{tabular}
-\label{rozsahy}
-\end{center}
-\end{table*}
-
-The objective function is defined in the following paragraph.
-
-
-Let $\bar{I}(\vec{p},t)$ be the cumulative infiltration obtained from solving the mathematical model~\eqref{richaxi} bounded by the initial and boundary conditions  defined in section~\ref{bccond} for a certain vector of SHP parameters $\vec{p}$ considered as
-\begin{lineq}\bar{I}(\vec{p},t) = \frac{\int\limits_0^t \int\limits_{\Gamma_1}-K \frac{\partial H}{\partial \vec{n}}(t)  \dd \Gamma_1 \dd t}{\int\limits_{\Gamma_1} \dd \Gamma_1}.\end{lineq}
-Let $I(t)$ be the cumulative infiltration defined by \eqref{vyhlaz} with parameters given in section~\ref{krivka}. 
-Then the objective function was defined for three different criteria in order to avoid ill-posed objective function definition.
-
-The objective functions were defined as follows:
-\begin{enumerate}[label={\bf \Roman*}.]
-\item First criterion $\Psi_1$ was defined as $L_2$ norm of the difference between the  experimental and model data and thus
-\begin{lineq}
-\label{objektiva1}
-\Psi_1 (\vec{p}) = \sqrt{\int\limits_0^{T_{end}} \left( \bar{I}(\vec{p},t) - I(t) \right)^2 \dd t},
-\end{lineq}
-where $T_{end}$ is the final simulation time [$T$], which is indeed the root mean square error (RMSE) for continuous functions. 
-\item Second criterion was the $L_{\infty}$ norm of the difference between the experimental and model data and thus
-\begin{lineq}
-\label{objektiva2}
-\Psi_2 (\vec{p}) = \mathrm{sup} \left( \sqrt{\left( \bar{I}(\vec{p},t) - I(t) \right)^2} \right), \quad  t \in (0, T_{end}).
-\end{lineq}
-\item Third criterion was considered as the difference between the infiltration rates (final derivatives) between the model data and the experimental data
-\begin{lineq}
-\label{objektiva3}
-\Psi_3 (\vec{p}) =  \sqrt{\left( \frac{\dd \bar{I}(\vec{p},T_{end})}{\dd t} - \frac{\dd I(T_{end})}{\dd t} \right)^2}.
-\end{lineq}
-
-
-\end{enumerate}
-
-We conducted multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and \eqref{objektiva3}. The aim of this multi-objective definition was to improve the conditioning of this inverse problem. If we only considered the objective function~\eqref{objektiva1}, then we were probably able to obtain the same solution as with this multi-objective definition with slower convergence of optimization procedure only (the selection of the optimization algorithm will be explained in the following section~\ref{optima}). This multi-objective function definition is based on our experience from previous attempts of inverse analysis of this infiltration problem.
-
-
-
-\subsubsection{Optimization algorithm}%[matej]
-\label{optima}
-
-In this contribution we used the modified genetic algorithm GRADE \citep{grade,Kucerova:2007:PHD} supported by niching method CERAF \citep{Hrstka} enhancing the algorithm with
-memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the standard genetic algorithm and differential operators taken from differential evolution. When GRADE converges, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is built around it in order to forbid the optimization algorithm to fall into the same local extreme again. The main setting of the optimization procedure was as follows: the population of the genetic algorithm contains 30 independent solutions, the whole identification stops after 20.000 objective function evaluations and a local extreme was marked after 600 evaluations without any improvement.
-
-
-\subsubsection{Multi-objective Optimization}
-
- In this contribution Average Ranking (AR) \citep{Leps:2007} was used to deal with multi-objective definition. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}. 
  
- \subsection{Benchmark evaluations}
+ 
+
+ 
+
+
+
+\section{Results and discussion} 
+
+
+
+
+\subsection{Benchmark evaluations}
  \label{benchmarks}
  
 The purpose of this benchmark example was to demonstrate, whether this class of problem -- identification of SHP parameters from cumulative flux measured at Dirichlet boundary -- can be affected by multimodality.
@@ -633,20 +650,7 @@ The purpose of this benchmark example was to demonstrate, whether this class of 
 \end{lineq}
  where $\Gamma_{bot}=0.0$ cm, $\Gamma_{top}=100.0$ cm, and $T_{end}=$\num{e-1}~hrs. Two distinguished soil types were considered here -- clay loam and sand, the parameters were obtained from~\citep{retc}, and are given in table~\ref{tab:bench}
  
- \begin{table*}[ht]
- \begin{center}
- \caption{SHP properties for benchmark models.}
-\fs
- \begin{tabular}{l||c c c c c}
-%   & $\alpha$ [$\textrm{cm^{-1}}$] & $n$ [-] & $\theta_r$ [-] & $\theta_s$  [-] & $K_s$ [$\textrm{cm.hrs^{-1}}$]  \\ \hline
-  & $\alpha$  [cm$^{-1}$] & $n$ [-] & $\theta_r$ [-] & $\theta_s$  [-]  &  $K_s$ [cm.hrs$^{-1}$]  \\ \hline
- clay loam & 0.019 & 1.31 & 0.095 & 0.41 & 6.24 \\ 
- sand &  0.145 & 2.68 & 0.045 & 0.43 & 29.7 \\ \hline
- \end{tabular}
- \label{tab:bench}
- \end{center}
- \end{table*}
- 
+
  
   The computational domain $\Omega$ was uniformly discretized with $\Delta x$=0.5~cm, the initial time step was $\Delta t$=\num{e-7}~hrs, and the error criterion from~\eqref{picard} for solving the nonlinear system~\eqref{matice} was   $\varepsilon$=\num{e-3}~cm.
  
@@ -704,17 +708,26 @@ Results of the benchmark problem are given in table~\ref{tab-benchres}. For thes
 %  0.042468, 1.1269, 0.25569, 69.785 0.0157830282
 % 0.12224    2.45494       0.35    32.6334 0.0139951908
 
- 
 
 
-
-\section{Results and discussion} 
+ The local extremes for the refinement level $r_f=0$ are given in table~\ref{shp-vysledky}, where the gray lines refer to local extremes with bad fitting properties (extremes 1-5), the local extremes 6-8 refer to inverse model solutions with good fitting properties. The results were visually inspected. An example of bad fitting dataset is depicted on figure~\ref{rf0samples} - left, and the example of the good fitting dataset is depicted on figure~\ref{rf0samples} - right. Solution for each dataset is  given in Appendix. Complete settings specifications for each $r_f$ level involved here are given in table~\ref{tab:rfset}.
 
 
 
 
-The first run with discretization level $r_f=0$ generated after 40.000 objective function calls (each call took approximately 3~min, executed on 32-core Intel(R) Xeon(R) CPU E5-2630, bogomips 4801.67) the local extremes are given in table~\ref{shp-vysledky}, where the gray lines refer to local extremes with bad fitting properties (extremes 1-5), the local extremes 6-8 refer to inverse model solutions with good fitting properties. The results were visually inspected. An example of bad fitting dataset is depicted on figure~\ref{rf0samples} - left, and the example of the good fitting dataset is depicted on figure~\ref{rf0samples} - right. Solution for each dataset is  given in Appendix.
-
+\begin{table*}[]
+\centering
+\fs
+\caption{Settings for different $r_f$ levels. Computer architecture  32-core Intel(R) Xeon(R) CPU E5-2630, bogomips 4801.67, objective functions were evaluated in parallel.}
+\label{tab:rfset}
+\begin{tabular}{|c||c|c|c|c|c|c|}
+\hline
+\begin{tabular}[c]{@{}c@{}}$r_f$ \\ level\end{tabular} & \begin{tabular}[c]{@{}c@{}}Picard criterion\\ $\varepsilon$ [cm] \end{tabular} & \begin{tabular}[c]{@{}c@{}}number of \\ nodes\end{tabular} & \begin{tabular}[c]{@{}c@{}}number of\\ elements\end{tabular} & \begin{tabular}[c]{@{}c@{}}initial\\ $\Delta t$ [hrs] \end{tabular} & \begin{tabular}[c]{@{}c@{}}number of \\ objective function\\ evaluations\end{tabular} & \begin{tabular}[c]{@{}c@{}}CPU time  for \\  objective function\\ computation [min]   \end{tabular} \\ \hline  \hline
+0                                                      & $\leadsto +\infty$                                                       & 2097                                                       & 3861                                                         & \num{e-6}                                                    & 40 000                                                                                & 3                                                                                                \\ \hline
+1                                                      & \num{e-3}                                                                & 4503                                                       & 8488                                                         & \num{e-7}                                                    & 1 000                                                                                 & 20                                                                                               \\ \hline
+2                                                      & \num{e-4}                                                                & 9637                                                       & 18588                                                        & \num{e-8}                                                    & 1 000                                                                                 & 60                                                                                               \\ \hline
+\end{tabular}
+\end{table*}
 
 
 
@@ -749,7 +762,7 @@ no. & $\alpha$ [cm$^{-1}$] & $n$ [-] & $\theta_s$ [-] & $K_s$ [cm.hrs$^{-1}$] & 
 \label{rf0samples}
 \end{figure}
 
-In the next step the refinement level was increased, new mesh was generated, the new mesh discretized the domain into 4503 nodes and 8488 elements. The Picard criterion for the pressure head was refined for~\num{1e-3}~cm, and the initial time step was~\num{1e-7}~hrs. Only the local extremes 6-8 from table~\ref{shp-vysledky} were further evaluated.
+In the next step the refinement level was increased, new mesh was generated.
 
 For the local extreme 6, the refined numerical treatment $r_f=1$ has not affected the objective function, the figure~\ref{objfnc6} depicts two examples of the scatter plots -- for the parameter $\alpha$ and $n$. The scatter plots of all parameters are given in Appendix. The response for the $\alpha$ parameter (figure \ref{objfnc6} - left) seems adequate, which was not the case of $n$ parameter  (figure \ref{objfnc6} - right). It turns out that for this parameter set the objective function exhibits poor local sensitivity. However, this was not the case of the other local extremes, see figure~\ref{objfnc6.2} - left. 
 
@@ -798,7 +811,7 @@ extreme & $\theta_s$ [-]&$\alpha$ [cm$^{-1}$]&n [-]& $K_s$ [cm.hrs$^{-1}$]  \\ \
 \end{center}
 \end{table*}
 
-With the increased discretization level the runtime for each simulation increased for 20 minutes on hardware equipment specified above. But since the parameter range was already relatively narrow, the optimization algorithm converged fast and the solution was achieved after 1000 iterations. The process was executed in parallel on 16-core CPU architecture, and thus the results were obtained in less than one day.
+
 
 \begin{figure}
 \rotatebox{-90}{
@@ -811,7 +824,7 @@ With the increased discretization level the runtime for each simulation increase
 
 The updated solutions maintained similar fitting qualities as the solutions obtained at $r_f=0$, see figure~\ref{rf1examples} - right. Whereas the solution depicted on figure~\ref{rf1examples} - left was created with SHP dataset obtained at previous discretization level ($r_f=0$) tested on model with increased discretization level ($r_f=1$).
 
-In order to evaluate the results obtained at $r_f=1$ discretization level, the discretization level was increased again for $r_f=2$. New mesh was generated with 6843 nodes and 13122 elements. Initial time step was now set for \num{1e-8}~hrs, and the Picard criterion was set for~\num{1e-4}~hrs. New scatter plots were generated, an example is given in figure~\ref{ext6rf1-an2-example}. For all scatter plots see Appendix.
+In order to evaluate the results obtained at $r_f=1$ discretization level, the discretization level was increased again for $r_f=2$.  New scatter plots were generated, an example is given in figure~\ref{ext6rf1-an2-example}. For all scatter plots see Appendix.
 
 
 \begin{figure}[htb!]
@@ -824,7 +837,7 @@ In order to evaluate the results obtained at $r_f=1$ discretization level, the d
 \end{figure}
 
 
-The location of peaks of the scatter plots for these two sequential disceretization levels do not vary significantly, and so no further refinements were required. The table~\ref{shp-vysledky} provides the final results of this inverse problem. As mentioned above the solution for the extreme 6 didn't require further updates, except for  the $n$ parameter, which has been slightly updated from the indentified value 2.152 for new value 1.950 in accordance with the scatter plot in figure~\ref{objfnc6} - right.
+The location of peaks of the scatter plots for these two sequential disceretization levels do not vary significantly, and so no further refinements were required. The table~\ref{shp-vysledky} provides the final results of this inverse problem. As mentioned above the solution for the extreme 6 didn't require further updates, except for  the $n$ parameter, which has been slightly updated from the identified value 2.152 for new value 1.950 in accordance with the scatter plot in figure~\ref{objfnc6} - right.
 
 \begin{table*}[ht]
 \centering
@@ -1011,16 +1024,16 @@ Scatter plots of the objective functions for the local extreme 8 are depicted in
 
 \begin{figure}[htb!]
 \rotatebox{-90}{
-{\includegraphics[height=7cm]{data/objvals/Ks-5.eps}}}
+{\includegraphics[height=7cm]{data/objvals/Ks-6.eps}}}
 \rotatebox{-90}{
-{\includegraphics[height=7cm]{data/objvals/ths-5.eps}}}
+{\includegraphics[height=7cm]{data/objvals/ths-6.eps}}}
 \label{ext6rf0-Kt3}
 \caption{Scatter plots for $r_f=0,1$ for extreme 8 for parameters $K_s$ and $\theta_s$. }
 \end{figure}
 
 \begin{figure}[htb!]
 \rotatebox{-90}{
-{\includegraphics[height=7cm]{data/objvals/Ss-5.eps}}}
+{\includegraphics[height=7cm]{data/objvals/Ss-6.eps}}}
 \label{ext6rf0-Ss3}
 \caption{Scatter plots for $r_f=0,1$ for extreme 8 for parameter $S_s$.}
 \end{figure}
