--- a/version2.tex
+++ b/version2.tex
@@ -146,7 +146,7 @@ The definition of a unique inverse function for identification of macroscopic me
 
 A challenging issue is the treatment of the nonlinear operator of the Richards equation. \cite{beven2003-uncertain} reported that 56\% of the simulations were rejected during Monte Carlo simulations on a wide range of parameters, because of convergence problems. 
 Their study did not mention explicitly why. We assume that these convergence issues originated from the nonlinear operator treatment.
-It could be concluded, that if we use a simple Picard method for the nonlinear operator, and we increase the iteration criterion (which is typically referred to as $h$ or $\theta$ tolerance), we will obtain a less accurate solution but we will also need less iterations for the Picard method. If we increase the criterion enough, we end up with a semi-implicit solution, where the constitutive functions in the Richards equation are evaluated from the previous time level solution -- thus we just need a single outer iteration.
+It could be concluded, that if we use a simple Picard method for the nonlinear operator, and we increase the iteration criterion (which is typically referred to as $h$ or $\theta$ tolerance), we will obtain a less accurate solution but we will also need less iterations for the Picard method. If we increase the criterion enough, we end up with a semi-implicit solution, where the constitutive functions in the Richards equation are evaluated from the previous time level solution -- thus we just need a single  iteration.
 
 
 
@@ -356,7 +356,7 @@ Note that we should avoid using the coordinates, where $r=0$.
 
 \subsubsection{Domain shape restrictions}
 
-Since \cite{Dusek} mentioned several difficulties with incorrect triangular mesh setup while modeling the SR experiment, we tried to avoid possible numerical issues connected with domains with sharp spikes.
+ \cite{Dusek} mentioned several difficulties with incorrect triangular mesh setup while modeling the SR experiment, we tried to avoid possible numerical issues connected with domains with sharp spikes.
 
 % The governing equation~\eqref{richaxi} will be solved here by linear finite element method, which is a subset of variational methods. Using standard setup the solution $H$ of~\eqref{richaxi} will be taken from Sobolev functional space defined for functions on Lipschitz bounded domains~\citep{braess, pum}.
 
@@ -413,7 +413,7 @@ It is apparent that the wetting front originating from our infiltration experime
 \end{lineq}
 is in a conflict with the initial condition (since the outer normal vector $\vec{n} = \left(\begin{smallmatrix} &0 \\ -&1 \end{smallmatrix} \right)$), and produces extra computational costs. The computed fluxes produced at the bottom boundary in the beginning of the simulation with such a boundary setup, originates from the initial and boundary condition mismatch, and has no physical meaning.
 
-Physically correct boundary conditions for the bottom boundary is either the Neumann no-flow boundary or Dirichlet boundary both at the groundwater table. We chose a constant Dirichlet boundary condition. The average depth of the groundwater table is approximately -280~cm below the surface. With this particular setup the domain became extremely narrow and deep, see figure~\ref{valecbc}.
+Physically correct boundary conditions for the bottom boundary is either the Neumann no-flow boundary or Dirichlet boundary both at the groundwater table. We chose a constant Dirichlet boundary condition. The average depth of the groundwater table is approximately -280~cm below the surface, and  we assume that the water table remains constant during the experiment. With this particular setup the domain became extremely narrow and deep, see figure~\ref{valecbc}.
 
 
  \begin{figure}
@@ -504,10 +504,8 @@ We conducted multi-objective optimization. However, it is apparent that minimizi
 In this contribution we used the modified genetic algorithm GRADE \citep{grade,Kucerova:2007:PHD} supported by niching method CERAF \citep{Hrstka} enhancing the algorithm with
 memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the standard genetic algorithm and differential operators taken from differential evolution. When GRADE converges, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is built around it in order to forbid the optimization algorithm to fall into the same local extreme again. The main setting of the optimization procedure was as follows: the population of the genetic algorithm contains 30 independent solutions, the whole identification stops after 20.000 objective function evaluations and a local extreme was marked after 600 evaluations without any improvement.
 
-
-% \subsubsection{Multi-objective Optimization}
-% !!!!!!add connections
- In this contribution Average Ranking (AR) \citep{Leps:2007} was used to deal with multi-objective definition. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}. 
+GRADE project is capable for multi-objective definition for the objective function, which is achieved with so-called
+ Average Ranking (AR) \citep{Leps:2007}. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}. 
 
 
 \subsection{Numerical solution and computational issues}
@@ -528,12 +526,12 @@ Equation~\eqref{richaxi} was implemented into the DRUtES library~\citep{drutes}.
 where $k$ denotes the iteration level, and $l$ denotes the time level, until \begin{lineq} \label{picard} ||\vec{x}_l^{k+1} - \vec{x}_l^k||_2 < \varepsilon , \end{lineq} where $\varepsilon$ is the desired iteration criterion.  It is apparent that the number of required  iterations depends on the $\varepsilon$ criterion. 
 
 
-The method~\eqref{matice} degenerates into a kind of semiexplicit approximation if the error criterion $\varepsilon$ was "infinitely huge" -- it means taken from the extended real numbers, $\varepsilon \in {\overline {\mathbb {R} }}$, and assigned as $\varepsilon = + \infty$. This semiexplicit approximation is denoted as
+The method~\eqref{matice} degenerates into a kind of semiexplicit approximation if the error criterion $\varepsilon$ was "infinitely huge" -- inn theory it means taken from the extended real numbers, $\varepsilon \in {\overline {\mathbb {R} }}$, and assigned as $\varepsilon = + \infty$. This semiexplicit approximation is denoted as
 \begin{lineq}
 \label{matice2}
 \mathbf{A}(\vec{x}_{l-1}) \vec{x}_l = \vec{b}(\vec{x}_{l-1}).
 \end{lineq}
- This semiexplicit method always requires just a single outer iteration. With a short time step the method converges to the exact solution. For inappropriate time steps, the method diverges from the exact solution faster than the method~\eqref{matice}. Nonetheless, the method~\eqref{matice2} is free of possible issues related to the convergence of the nonlinear operator.
+ This semiexplicit method always requires just a single  iteration. With a short time step the method converges to the exact solution. For inappropriate time steps, the method diverges from the exact solution faster than the method~\eqref{matice}. Nonetheless, the method~\eqref{matice2} is free of possible issues related to the convergence of the nonlinear operator.
 
 
 
@@ -547,15 +545,17 @@ The infiltration flux is obtained from the numerical derivative of the solution 
 Following the concerns about  effects of numerical treatment for the identified values of SHP parameters a specific  automatic calibration methodology was proposed. The technique is explained in brief in figure~\ref{flowchart}, and  details are given in the following paragraph.
 
 Before we start with automatic calibration description, the following nomenclature will  be defined % I really wanted to say here Let us define :)
+
+\hrulefill
 \begin{description}
-\item[$\vec{p}$] -- vector of SHP parameters, vector contains the values of $\alpha$, $n$, $\theta_s$, $K_s$, $S_s$,
 \item[$r_f$] -- "refinement level", the problem is treated with different spatial and temporal discretization setups, each setup is denoted by value of $r_f$ index,
-\item[$\vec{p}_{max,min}^{r_f}$] -- maximal, resp. minimal values of SHP parameters,
 \item[$i_e$] -- local extreme index,
+\item[$\vec{p}$] -- vector of SHP parameters, vector contains the values of $\alpha$, $n$, $\theta_s$, $K_s$, $S_s$,
+\item[$\vec{p}_{max,min}^{r_f}$] -- maximal, resp. minimal values of SHP parameters defining a parameter range for a certain refinement level $r_f$,
+\item[$\vec{p}_{max,min}^{ i_e, r_f}$] -- maximal, resp. minimal values of SHP parameters defining a parameter range for a certain refinement level $r_f$ in a certain vicinity of a local extreme $i_e$,
 \item[$\Delta(\vec{x})$] -- spatial discretization (mesh density, mesh is non-uniform).
 \end{description}
-
- 
+\hrulefill
 
 
 \begin{figure*}
@@ -581,6 +581,7 @@ The calibration algorithm is described as follows:
                   \end{lineq}
 \item create a response plot of the objective function~\eqref{objektiva1} for current $r_f$ and $r_f-1$ in the neighborhood defined as 
 \begin{lineq}
+\label{parrange}
 \begin{split}
 \vec{p}^{i_e, r_f}_{max} &= 1.20\vec{p}^{i_e}, \\
 \vec{p}^{i_e,r_f}_{min} &= 0.70\vec{p}^{i_e}. 
@@ -596,7 +597,7 @@ The calibration algorithm is described as follows:
    plots for the selected local extreme $i_e$ created with discretization $r_f$ and $r_f-1$.
     \item \label{cond} {\bf If} the response plots differ significantly.
    \begin{itemize}%[label=(\subscript{b}{\arabic*})]
-    \item {\bf Then} do the calibration at parameter range: \begin{lineq} \begin{split} \vec{p}_{max} &= 1.2\vec{p}^{i_e,r_f-1}, \\   \vec{p}_{min} &= 0.8\vec{p}^{i_e,r_f-1 }. \end{split}\end{lineq} New sets of vectors  $\vec{p}_{r_f}^{i_e}$ will be generated.
+    \item {\bf Then} do the calibration at parameter range defined in~\eqref{parrange}. New sets of vectors  $\vec{p}_{r_f}^{i_e}$ will be generated.
     \item \label{ll2} Increase the discretization level $r_f$ as $r_f=r_f+1$, perform the update~\eqref{coeffs}, return to~\ref{val}, and check the condition~\ref{cond}.
     \end{itemize}
     \item {\bf else}
@@ -646,7 +647,7 @@ The purpose of this benchmark example was to demonstrate, whether this class of 
   H(x,t_0) &= 0\, cm , \quad \forall x \in \Omega,
   \end{split}
 \end{lineq}
- where $\Gamma_{bot}=0.0$ cm, $\Gamma_{top}=100.0$ cm, and $T_{end}=$\num{e-1}~hrs. Two distinguished soil types were considered here -- clay loam and sand, the parameters were obtained from~\citep{retc}, and are given in table~\ref{tab:bench}
+ where $\Gamma_{bot}=0.0$ cm, $\Gamma_{top}=100.0$ cm, and $T_{end}=$\num{e-1}~hrs. Two distinguished soil types were considered here -- clay loam and sand, the parameters were obtained from~\citep{retc}.
  
 
  
